# ethernet-intel

./: Cargo.toml  README.md  rust-toolchain.toml
igb/: Cargo.toml  README.md  bare-test.toml
igb/src/: descriptor.rs  err.rs  lib.rs  mac.rs  osal.rs  phy.rs  ring.rs
igb/src/ring/: mod.rs  rx.rs  tx.rs
igb/tests/: test.rs
