[workspace]
members = [
  "igb",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/drivercraft/ethernet-intel"

[workspace.dependencies]
futures = {version = "0.3", default-features = false}
thiserror = {version = "2.0", default-features = false}
tock-registers = {version = "0.10"}
