[package]
edition = "2024"
name = "eth-igb"
version = "0.1.0"

[dependencies]
dma-api = {version = "0.3", features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
thiserror = {workspace = true}
tock-registers = {workspace = true}
trait-ffi = "0.1"

[dev-dependencies]
bare-test = "0.4"
pcie = "0.3"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
