[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Intel IGB Ethernet driver"
edition = "2024"
keywords = ["os", "driver", "ethernet", "intel"]
license = "MIT"
name = "eth-igb"
version = "0.1.1"
repository.workspace = true

[dependencies]
dma-api = {version = "0.5", features = ["alloc"]}
futures = {workspace = true}
log = "0.4"
mbarrier = "0.1"
thiserror = {workspace = true}
tock-registers = {workspace = true}
trait-ffi = "0.2"

[dev-dependencies]
bare-test = "0.7"
pcie = "0.3"
smoltcp = {version = "0.12", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-icmp"]}
spin_on = "0.1"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
